# CNC

./: README.md
esp/: CMakeLists.txt  sdkconfig
esp/components/axis/: CMakeLists.txt  axis.cpp  axis.h
esp/components/spi/: CMakeLists.txt  spi_client.cpp  spi_client.h
esp/components/step_calculator/: CMakeLists.txt  step_calculator.cpp  step_calculator.h
esp/components/timer/: CMakeLists.txt  move_timer.cpp  move_timer.h
esp/main/: main.cpp
pi/: .~lock.Program Colors.ods#  Program Colors.ods
pi/src/: Action.cpp  Action.h  CMakeLists.txt  ConfigureAxes.cpp  ConfigureAxes.h  Curve.cpp  Curve.h  GCode.cpp  GCode.h  JogController.cpp  JogController.h  Laser.cpp  Laser.h  Line.cpp  Line.h  MainWindow.h  MotorController.cpp  MotorController.h  PositionReadout.cpp  PositionReadout.h  Program.cpp  Program.h  SPI.cpp  SPI.h  SyncMoveController.cpp  SyncMoveController.h  Types.h  common.h  math_test.cpp  testing_main.cpp
pi/src/action/: CMakeLists.txt  action.cpp  action.h  laserAction.cpp  laserAction.h  stepperAction.cpp  stepperAction.h  syncAction.cpp  syncAction.h
pi/src/control/: CMakeLists.txt  controlPanel.cpp  controlPanel.h  knob.h
pi/src/device/: CMakeLists.txt  device.cpp  device.h  laser.cpp  laser.h  spiDevice.cpp  spiDevice.h  stepperGroup.cpp  stepperGroup.h  stepperMotor.cpp  stepperMotor.h
pi/src/program/: CMakeLists.txt  codeBlock.cpp  codeBlock.h  program.cpp  program.h
pi/src/utilities/: CMakeLists.txt  ConfigureUtility.cpp  ConfigureUtility.h
